--- a/index.html
+++ b/index.html
@@ -64,16 +64,14 @@
     </header>
 
     <main>
-      
-        <section class="section-text-button">
-          <!--Img + button-->
-          <div class="container">
-            
-            <h1 class="prime-text">Effective Solutions for Your Business</h1>
-            <button class="prime-button" type="button">Order Service</button>
-          </div>
-        </section>
-   
+      <section class="section-text-button">
+        <!--Img + button-->
+        <div class="container">
+          <h1 class="prime-text">Effective Solutions for Your Business</h1>
+          <button class="prime-button" type="button">Order Service</button>
+        </div>
+      </section>
+
       <!--Sekcia perevag-->
 
       <section class="benefits">
@@ -205,7 +203,7 @@
             </li>
           </ul>
         </div>
-      <ction>
+      </section>
     </main>
 
     <footer class="end-page">
@@ -214,8 +212,8 @@
           >Web<span class="logo-studio">Studio</span></a
         >
         <p class="end-page-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
       </div>
     </footer>
