--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="portfolio-title-foto">Mark Guerrero</h3>
-              <p class="portfolio-text-foto">Product Designer</p>
+              <div class="name-position">
+                <h3 class="portfolio-title-foto">Mark Guerrero</h3>
+                <p class="portfolio-text-foto">Product Designer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -131,8 +133,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="portfolio-title-foto">Tom Ford</h3>
-              <p class="portfolio-text-foto">Frontend Developer</p>
+              <div class="name-position">
+                <h3 class="portfolio-title-foto">Tom Ford</h3>
+                <p class="portfolio-text-foto">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -141,8 +145,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="portfolio-title-foto">Camila Garcia</h3>
-              <p class="portfolio-text-foto">Marketing</p>
+              <div class="name-position">
+                <h3 class="portfolio-title-foto">Camila Garcia</h3>
+                <p class="portfolio-text-foto">Marketing</p>
+              </div>
             </li>
             <li class="team-member">
               <img
