--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="portfolio-title-foto">Daniel Wilson</h3>
-              <p class="portfolio-text-foto">UI Designer</p>
+              <div class="name-position">
+                <h3 class="portfolio-title-foto">Daniel Wilson</h3>
+                <p class="portfolio-text-foto">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
