--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <section class="benefits">
         <div class="container">
-          <h2 class="benefits-title">Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefit-item">
               <h3 class="portfolio-title-foto">Strategy</h3>
