--- a/index.html
+++ b/index.html
@@ -173,8 +173,10 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <img src="./images/img-9.jpg" alt="Banking App" width="360" />
-              <h3 class="portfolio-title-foto">Banking App</h3>
-              <p class="portfolio-text-foto">App</p>
+              <div class="name-category">
+                <h3 class="portfolio-title-foto">Banking App</h3>
+                <p class="portfolio-text-foto">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -182,18 +184,24 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="portfolio-title-foto">Cashless Payment</h3>
-              <p class="portfolio-text-foto">Marketing</p>
+              <div class="name-category">
+                <h3 class="portfolio-title-foto">Cashless Payment</h3>
+                <p class="portfolio-text-foto">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/img-7.jpg" alt="Meditation App" width="360" />
-              <h3 class="portfolio-title-foto">Meditation App</h3>
-              <p class="portfolio-text-foto">App</p>
+              <div class="name-category">
+                <h3 class="portfolio-title-foto">Meditation App</h3>
+                <p class="portfolio-text-foto">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/img-6.jpg" alt="Taxi Service" width="360" />
-              <h3 class="portfolio-title-foto">Taxi Service</h3>
-              <p class="portfolio-text-foto">Marketing</p>
+              <div class="name-category">
+                <h3 class="portfolio-title-foto">Taxi Service</h3>
+                <p class="portfolio-text-foto">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -201,13 +209,17 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="portfolio-title-foto">Screen Illustrations</h3>
-              <p class="portfolio-text-foto">Design</p>
+              <div class="name-category">
+                <h3 class="portfolio-title-foto">Screen Illustrations</h3>
+                <p class="portfolio-text-foto">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/img-4.jpg" alt="Online Courses" width="360" />
-              <h3 class="portfolio-title-foto">Online Courses</h3>
-              <p class="portfolio-text-foto">Marketing</p>
+              <div class="name-category">
+                <h3 class="portfolio-title-foto">Online Courses</h3>
+                <p class="portfolio-text-foto">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
