correction of comments margin 8px

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </header>
 
     <main>
+      <!--Sekcia 1-->
       <section class="section-text-button">
         <!--Img + button-->
         <div class="container">
@@ -72,7 +73,7 @@
         </div>
       </section>
 
-      <!--Sekcia perevag-->
+      <!--Sekcia 2-->
 
       <section class="benefits">
         <div class="container">
@@ -109,7 +110,7 @@
           </ul>
         </div>
       </section>
-      <!--Sekcia s photo-->
+      <!--Sekcia 3-->
       <section class="present-photo">
         <div class="container">
           <h2 id="studio" class="our-team-title">Our Team</h2>
@@ -166,7 +167,7 @@
         </div>
       </section>
 
-      <!--Sekcia s photo portfolio-->
+      <!--Sekcia 4-->
       <section class="portfolio-section">
         <div class="container">
           <h2 id="portfolio" class="portfolio-title">Our Portfolio</h2>
