reworked css file and edited html

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
   </head>
   <body>
     <header class="header-top">
-      <div class="container">
+      <div class="container-header">
         <nav class="top-line">
           <a class="logo" href="./index.html"
             >Web<span class="logo-span">Studio</span></a
           >
           <ul class="nav-list">
-            <li>
-              <a class="item" href="./index.html">Studio</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
             </li>
-            <li>
-              <a class="item" href="">Portfolio</a>
+            <li class="nav-item">
+              <a class="nav-link" href="">Portfolio</a>
             </li>
-            <li><a class="item" href="">Contacts</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
