reworked css file and edited html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header class="header-top">
-      <div class="container-header">
+      <div class="container container-header">
         <nav class="top-line">
           <a class="logo" href="./index.html"
             >Web<span class="logo-span">Studio</span></a
